product api consume

--- a/SignalRWebUI/Views/Category/CreateCategory.cshtml
+++ b/SignalRWebUI/Views/Category/CreateCategory.cshtml
@@ -1,4 +1,4 @@
-﻿@model SignalRWebUI.ViewModels.CategoryViewModels.CreateCategoryViewModel
+﻿@model CreateCategoryViewModel
 
 @{
     ViewData["Title"] = "CreateCategory";
@@ -22,8 +22,8 @@
                             </div>
                         </div>
                         <div class="card-action">
-                            <button class="btn btn-primary">Kategoriyi Ekle</button>
-                            <a href="/Category/Index/" class="btn btn-danger">Değişikliklerden Vazgeç</a>
+                            <button class="btn btn-primary btn-round">Kategoriyi Ekle</button>
+                            <a href="/Category/Index/" class="btn btn-danger btn-round">Değişikliklerden Vazgeç</a>
                         </div>
                     </div>
                 </form>
