--- a/SignalRWebUI/Views/Category/UpdateCategory.cshtml
+++ b/SignalRWebUI/Views/Category/UpdateCategory.cshtml
@@ -1,4 +1,4 @@
-﻿@model SignalRWebUI.ViewModels.CategoryViewModels.UpdateCategoryViewModel
+﻿@model UpdateCategoryViewModel
 
 @{
     ViewData["Title"] = "UpdateCategory";
@@ -23,8 +23,8 @@
                             </div>
                         </div>
                         <div class="card-action">
-                            <button class="btn btn-primary">Kategoriyi Güncelle</button>
-                            <a href="/Category/Index/" class="btn btn-danger">Değişikliklerden Vazgeç</a>
+                            <button class="btn btn-primary btn-round">Kategoriyi Güncelle</button>
+                            <a href="/Category/Index/" class="btn btn-danger btn-round">Değişikliklerden Vazgeç</a>
                         </div>
                     </div>
                 </form>
