--- a/SignalRWebUI/Views/Category/Index.cshtml
+++ b/SignalRWebUI/Views/Category/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<SignalRWebUI.ViewModels.CategoryViewModels.ResultCategoryViewModel>
+﻿@model List<ResultCategoryViewModel>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/AdminLayout/Index.cshtml";
@@ -33,13 +33,13 @@
                                     <td>@item.Id</td>
                                     <td>@item.CategoryName</td>
                                     <td>@item.Status</td>
-                                    <td><a href="/Category/DeleteCategory/@item.Id/" class="btn btn-outline-danger">Sil</a></td>
-                                    <td><a href="/Category/UpdateCategory/@item.Id/" class="btn btn-outline-warning">Güncelle</a></td>
+                                        <td><a href="/Category/DeleteCategory/@item.Id/" class="btn btn-outline-danger btn-round">Sil</a></td>
+                                        <td><a href="/Category/UpdateCategory/@item.Id/" class="btn btn-outline-warning btn-round">Güncelle</a></td>
                                 </tr>
                             }
                             </tbody>
                         </table>
-                        <a href="/Category/CreateCategory/" class="btn btn-outline-primary">Yeni Kategori Ekle</a>
+                        <a href="/Category/CreateCategory/" class="btn btn-outline-primary btn-round">Yeni Kategori Ekle</a>
                     </div>
                 </div>
             </div>
