--- a/SignalRWebUI/Views/Shared/Components/_LayoutSidebarPartialComponent/Default.cshtml
+++ b/SignalRWebUI/Views/Shared/Components/_LayoutSidebarPartialComponent/Default.cshtml
@@ -51,17 +51,15 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="forms.html">
+                <a href="/Category/Index/">
                     <i class="la la-keyboard-o"></i>
                     <p>Kategoriler</p>
-                    <span class="badge badge-count">50</span>
                 </a>
             </li>
-            <li class="nav-item active">
-                <a href="tables.html">
+            <li class="nav-item">
+                <a href="/Product/Index/">
                     <i class="la la-th"></i>
                     <p>Ürünler</p>
-                    <span class="badge badge-count">6</span>
                 </a>
             </li>
             <li class="nav-item">
