--- a/SignalRWebUI/Views/_ViewImports.cshtml
+++ b/SignalRWebUI/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using SignalRWebUI
 @using SignalRWebUI.Models
+@using SignalRWebUI.ViewModels.CategoryViewModels
+@using SignalRWebUI.ViewModels.ProductViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
