--- a/SignalRWebUI/Views/_ViewImports.cshtml
+++ b/SignalRWebUI/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using SignalRWebUI.Models
 @using SignalRWebUI.ViewModels.CategoryViewModels
 @using SignalRWebUI.ViewModels.ProductViewModels
+@using SignalRWebUI.ViewModels.AboutViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
