booking api consume

--- a/SignalRWebUI/Views/_ViewImports.cshtml
+++ b/SignalRWebUI/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using SignalRWebUI.ViewModels.CategoryViewModels
 @using SignalRWebUI.ViewModels.ProductViewModels
 @using SignalRWebUI.ViewModels.AboutViewModels
+@using SignalRWebUI.ViewModels.BookingViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
