--- a/SignalRWebUI/Views/Contact/Index.cshtml
+++ b/SignalRWebUI/Views/Contact/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<ResultAboutViewModel>
+﻿@model List<ResultContactViewModel>
 
 @{
     ViewData["Title"] = "Index";
@@ -7,23 +7,24 @@
 
 <div class="content">
     <div class="container-fluid">
-        <h4 class="page-title">Ana Sayfa Hakkımızda İşlemleri</h4>
+        <h4 class="page-title">Ana Sayfa İletişim Bilgi İşlemleri</h4>
         <div class="row">
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-header">
-                        <div class="card-title">Hakkımızda Listesi</div>
+                        <div class="card-title">İletişim Listesi</div>
                     </div>
                     <div class="card-body">
                         <div class="card-sub">
-                            Hakkımızda alanı ile ilgili işlemleri aşağıdan gerçekleştirebilirsiniz. Tema bütünlüğü için sadece 1 tane hakkımızda alanı oluşturmayı unutmayın.
+                            İletişim alanı ile ilgili işlemleri aşağıdan gerçekleştirebilirsiniz. Tema bütünlüğü için sadece 1 tane iletişim alanı oluşturmayı unutmayın.
                         </div>
                         <table class="table mt-3">
                             <thead>
                                 <tr>
                                     <th scope="col">#</th>
-                                    <th scope="col">Fotoğraf Yolu</th>
-                                    <th scope="col">Başlık</th>
+                                    <th scope="col">Konum</th>
+                                    <th scope="col">Telefon</th>
+                                    <th scope="col">Email</th>
                                     <th scope="col">Açıklama</th>
                                     <th scope="col">Sil</th>
                                     <th scope="col">Güncelle</th>
@@ -34,20 +35,22 @@
                                 {
                                     <tr>
                                         <td>@item.Id</td>
-                                        <td>@item.ImageUrl</td>
-                                        <td>@item.Title</td>
-                                        <td>@item.Description</td>
-                                        <td><a href="/About/DeleteAbout/@item.Id/" class="btn btn-outline-danger btn-round">Sil</a></td>
-                                        <td><a href="/About/UpdateAbout/@item.Id/" class="btn btn-outline-warning btn-round">Güncelle</a></td>
+                                        <td>@item.Location</td>
+                                        <td>@item.PhoneNumber</td>
+                                        <td>@item.Email</td>
+                                        <td>@item.FooterDescription</td>
+                                        <td><a href="/Contact/DeleteContact/@item.Id/" class="btn btn-outline-danger btn-round">Sil</a></td>
+                                        <td><a href="/Contact/UpdateContact/@item.Id/" class="btn btn-outline-warning btn-round">Güncelle</a></td>
                                     </tr>
                                 }
                             </tbody>
                         </table>
-                        <a href="/About/CreateAbout/" class="btn btn-outline-primary btn-round">Yeni Hakkımda Yazısı Ekle</a>
+                        <a href="/Contact/CreateContact/" class="btn btn-outline-primary btn-round">Yeni İletişim Yazısı Ekle</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
 
