--- a/SignalRWebUI/Views/Shared/Components/_LayoutSidebarPartialComponent/Default.cshtml
+++ b/SignalRWebUI/Views/Shared/Components/_LayoutSidebarPartialComponent/Default.cshtml
@@ -66,7 +66,6 @@
                 <a href="/Booking/Index/">
                     <i class="la la-bell"></i>
                     <p>Rezervasyonlar</p>
-                    <span class="badge badge-success">3</span>
                 </a>
             </li>
             <li class="nav-item">
@@ -79,6 +78,12 @@
                 <a href="icons.html">
                     <i class="la la-fonticons"></i>
                     <p>Mesajlar</p>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="/Contact/Index/">
+                    <i class="la la-fonticons"></i>
+                    <p>İletişim</p>
                 </a>
             </li>
             <li class="nav-item">
