--- a/SignalRWebUI/Views/_ViewImports.cshtml
+++ b/SignalRWebUI/Views/_ViewImports.cshtml
@@ -4,4 +4,5 @@
 @using SignalRWebUI.ViewModels.ProductViewModels
 @using SignalRWebUI.ViewModels.AboutViewModels
 @using SignalRWebUI.ViewModels.BookingViewModel
+@using SignalRWebUI.ViewModels.ContactViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
