discount api consume

--- a/SignalRWebUI/Views/_ViewImports.cshtml
+++ b/SignalRWebUI/Views/_ViewImports.cshtml
@@ -5,4 +5,5 @@
 @using SignalRWebUI.ViewModels.AboutViewModels
 @using SignalRWebUI.ViewModels.BookingViewModel
 @using SignalRWebUI.ViewModels.ContactViewModels
+@using SignalRWebUI.ViewModels.DiscountViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
