--- a/SignalRWebUI/Views/_ViewImports.cshtml
+++ b/SignalRWebUI/Views/_ViewImports.cshtml
@@ -6,4 +6,5 @@
 @using SignalRWebUI.ViewModels.BookingViewModel
 @using SignalRWebUI.ViewModels.ContactViewModels
 @using SignalRWebUI.ViewModels.DiscountViewModel
+@using SignalRWebUI.ViewModels.FeatureViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
