social media api consume

--- a/SignalRWebUI/Views/_ViewImports.cshtml
+++ b/SignalRWebUI/Views/_ViewImports.cshtml
@@ -7,4 +7,5 @@
 @using SignalRWebUI.ViewModels.ContactViewModels
 @using SignalRWebUI.ViewModels.DiscountViewModel
 @using SignalRWebUI.ViewModels.FeatureViewModels
+@using SignalRWebUI.ViewModels.SocialMediaViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
