testimonial api consume

--- a/SignalRWebUI/Views/_ViewImports.cshtml
+++ b/SignalRWebUI/Views/_ViewImports.cshtml
@@ -8,4 +8,5 @@
 @using SignalRWebUI.ViewModels.DiscountViewModel
 @using SignalRWebUI.ViewModels.FeatureViewModels
 @using SignalRWebUI.ViewModels.SocialMediaViewModels
+@using SignalRWebUI.ViewModels.TestimonialViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
