--- a/SignalRWebUI/Views/SignalRDefault/Index2.cshtml
+++ b/SignalRWebUI/Views/SignalRDefault/Index2.cshtml
@@ -1,9 +1,10 @@
-﻿@{
-    ViewData["Title"] = "Index";
+﻿
+@{
+    ViewData["Title"] = "Index2";
     Layout = "~/Views/AdminLayout/Index.cshtml";
 }
 
-<h1>Index</h1>
+<h1>Index2</h1>
 
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
@@ -17,18 +18,24 @@
             <div class="col-md-12">
                 <div class="card">
                     <script type="text/javascript">
+
                         $(document).ready(() => {
+
                             var connection = new signalR.HubConnectionBuilder().withUrl("https://localhost:7065/SignalRHub").build();
                             $("#connstatus").text(connection.state);
                             connection.start().then(() => {
                                 $("#connstatus").text(connection.state);
-                                connection.invoke("SendCategoryCount");
+                                setInterval(() => {
+                                    connection.invoke("SendCategoryCount");
+                                }, 1000);
+                          
                             }).catch((err) => { console.log(err) });
 
                             connection.on("ReceiveCategoryCount", (value) => {
                                 $("#categorycount").text(value);
                             });
                         });
+
                     </script>
                 </div>
             </div>
