--- a/SignalRWebUI/Views/Statistic/Index.cshtml
+++ b/SignalRWebUI/Views/Statistic/Index.cshtml
@@ -378,7 +378,7 @@
                         <div class="row">
                             <div class="col-5">
                                 <div class="icon-big text-center">
-                                    <i class="la la-newspaper-o"></i>
+                                    <i class="la la-cutlery"></i>
                                 </div>
                             </div>
                             <div class="col-7 d-flex align-items-center">
@@ -413,4 +413,5 @@
         </div>
     </div>
 </div>
+
 
