UI design and home page have been made dynamic

--- a/SignalRWebUI/Views/_ViewImports.cshtml
+++ b/SignalRWebUI/Views/_ViewImports.cshtml
@@ -9,4 +9,5 @@
 @using SignalRWebUI.ViewModels.FeatureViewModels
 @using SignalRWebUI.ViewModels.SocialMediaViewModels
 @using SignalRWebUI.ViewModels.TestimonialViewModels
+@using SignalRWebUI.ViewModels.SliderViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
