the menu page has been prepared and the cart page has been accessed.

--- a/SignalRWebUI/Views/Shared/Components/_MenuNavbarPartialComponent/Default.cshtml
+++ b/SignalRWebUI/Views/Shared/Components/_MenuNavbarPartialComponent/Default.cshtml
@@ -21,14 +21,14 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/Default/Index/">Ana Sayfa </a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/Menu/Index/">Menü</a>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="/Menu/Index/">Menü <span class="sr-only">(current)</span> </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/AboutUI/Index/">Hakkımızda</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/BookATable/Index/">Rezervasyon Yap</a>
+                            <a class="nav-link" href="/BookATable/Index">Rezervasyon Yap</a>
                         </li>
                     </ul>
                     <div class="user_option">
@@ -103,3 +103,4 @@
         </div>
     </header>
     <!-- end header section -->
+</div>
