--- a/SignalRWebUI/Views/_ViewImports.cshtml
+++ b/SignalRWebUI/Views/_ViewImports.cshtml
@@ -10,4 +10,5 @@
 @using SignalRWebUI.ViewModels.SocialMediaViewModels
 @using SignalRWebUI.ViewModels.TestimonialViewModels
 @using SignalRWebUI.ViewModels.SliderViewModels
+@using SignalRWebUI.ViewModels.BasketViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
