--- a/SignalRWebUI/Views/Baskets/Index.cshtml
+++ b/SignalRWebUI/Views/Baskets/Index.cshtml
@@ -28,26 +28,40 @@
             </div>
         </div>
     </div>
-    
-<div class="container-fluid">
-    <div class="row pt-xl-5">
-        <div class="col-lg-8 table-responsive mb-5">
-            <table class="table table-light table-borderless table-hover text-center mb-0">
-                <thead class="thead-dark">
-                <tr>
-                    <th>#</th>
-                    <th>Ürün Adı</th>
-                    <th>Adet</th>
-                    <th>Fiyat</th>
-                    <th>Toplam</th>
-                    <th>Sil</th>
-                </tr>
-                </thead>
-            </table>
+
+    <div class="container-fluid">
+        <div class="row pt-xl-5">
+            <div class="col-lg-8 table-responsive mb-5">
+                <table class="table table-light table-borderless table-hover text-center mb-0">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th>#</th>
+                            <th>Ürün Adı</th>
+                            <th>Adet</th>
+                            <th>Fiyat</th>
+                            <th>Toplam</th>
+                            <th>Sil</th>
+                        </tr>
+                    </thead>
+                    @foreach (var item in Model)
+                    {
+                        count++;
+                        <tbody class="align-middle">
+                            <tr>
+                                <td class="align-middle">@count</td>
+                                <td class="align-middle">@item.ProductId</td>
+                                <td class="align-middle">@item.Count</td>
+                                <td class="align-middle">@item.Price</td>
+                                <td class="align-middle">@item.TotalPrice</td>
+                                <td class="align-middle btn-delete"><button data-baskedid="@item.Id" id="btndeletebasketid" class="btn btn-sm btn-danger"><i class="fa fa-times"></i></button></td>
+                            </tr>
+                        </tbody>
+                    }
+                </table>
+            </div>
         </div>
     </div>
-</div>
-<!-- end food section -->
+    <!-- end food section -->
     @await Component.InvokeAsync("_UILayoutFooterPartialComponent")
 
     @await Component.InvokeAsync("_UILayoutScriptPartialComponent")
