removing items from the basket

--- a/SignalRWebUI/Views/Baskets/Index.cshtml
+++ b/SignalRWebUI/Views/Baskets/Index.cshtml
@@ -59,7 +59,7 @@
                                 <td class="align-middle">@item.Count</td>
                                 <td class="align-middle">@item.Price</td>
                                 <td class="align-middle">@item.TotalPrice</td>
-                                <td class="align-middle btn-delete"><button data-baskedid="@item.Id" id="btndeletebasketid" class="btn btn-sm btn-danger"><i class="fa fa-times"></i></button></td>
+                                <td class="align-middle btn-delete"><a href="/Baskets/DeleteBasket/@item.Id" class="btn btn-sm btn-danger"><i class="fa fa-times"></i></a></td>
                             </tr>
                         </tbody>
                     }
