--- a/SignalRWebUI/Views/Booking/Index.cshtml
+++ b/SignalRWebUI/Views/Booking/Index.cshtml
@@ -6,8 +6,40 @@
     int count = 0;
 }
 
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="~/js/site.js" asp-append-version="true"></script>
+<script src="~/lib/microsoft/signalr/dist/browser/signalr.js"></script>
+<script src="~/lib/microsoft/signalr/dist/browser/signalr.min.js"></script>
+
 <div class="content">
     <div class="container-fluid">
+        
+        <script type="text/javascript">
+
+            $(document).ready(() => {
+
+                var connection = new signalR.HubConnectionBuilder().withUrl("https://localhost:7065/SignalRHub").build();
+                $("#connstatus").text(connection.state);
+                connection.start().then(() => {
+                    $("#connstatus").text(connection.state);
+                    setInterval(() => {
+                        connection.invoke("GetBookingList");
+                    }, 5000);
+                }).catch((err) => { console.log(err) });
+
+                connection.on("ReceiveBookingList", (resultBookingList) => {
+                    console.log(resultBookingList);
+                    $("#bookingList").empty();
+                    resultBookingList.forEach((item, index)=>{
+                        $("#bookingList").append(`<li class="list-group-item">${item.fullName}</li>`)
+                    });
+                });
+
+            });
+
+        </script>
+
         <h4 class="page-title">Rezervasyon İşlemleri</h4>
         <div class="row">
             <div class="col-md-12">
@@ -21,37 +53,40 @@
                         </div>
                         <table class="table mt-3">
                             <thead>
-                                <tr>
-                                    <th scope="col">#</th>
-                                    <th scope="col">Ad Soyad</th>
-                                    <th scope="col">Telefon Numarası</th>
-                                    <th scope="col">Email</th>
-                                    <th scope="col">Kişi Sayısı</th>
-                                    <th scope="col">Tarih</th>
-                                    <th scope="col">Rezervasyon Durumu</th>
-                                    <th scope="col">Sil</th>
-                                    <th scope="col">Güncelle</th>
-                                </tr>
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">Ad Soyad</th>
+                                <th scope="col">Telefon Numarası</th>
+                                <th scope="col">Email</th>
+                                <th scope="col">Kişi Sayısı</th>
+                                <th scope="col">Tarih</th>
+                                <th scope="col">Rezervasyon Durumu</th>
+                                <th scope="col">Sil</th>
+                                <th scope="col">Güncelle</th>
+                            </tr>
                             </thead>
                             <tbody>
-                                @foreach (var item in Model)
-                                {
-                                    count++;
-                                    <tr>
-                                        <td>@count</td>
-                                        <td>@item.FullName</td>
-                                        <td>@item.PhoneNumber</td>
-                                        <td>@item.Email</td>
-                                        <td>@item.PersonCount</td>
-                                        <td>@item.Date</td>
-                                        <td>Rezervasyon Alındı</td>
-                                        <td><a href="/Booking/DeleteBooking/@item.Id/" class="btn btn-outline-danger btn-round">Sil</a></td>
-                                        <td><a href="/Booking/UpdateBooking/@item.Id/" class="btn btn-outline-warning btn-round">Güncelle</a></td>
-                                    </tr>
-                                }
+                            @foreach (var item in Model)
+                            {
+                                count++;
+                                <tr>
+                                    <td>@count</td>
+                                    <td>@item.FullName</td>
+                                    <td>@item.PhoneNumber</td>
+                                    <td>@item.Email</td>
+                                    <td>@item.PersonCount</td>
+                                    <td>@item.Date</td>
+                                    <td>Rezervasyon Alındı</td>
+                                    <td><a href="/Booking/DeleteBooking/@item.Id/" class="btn btn-outline-danger btn-round">Sil</a></td>
+                                    <td><a href="/Booking/UpdateBooking/@item.Id/" class="btn btn-outline-warning btn-round">Güncelle</a></td>
+                                </tr>
+                            }
                             </tbody>
                         </table>
                         <a href="/Booking/CreateBooking/" class="btn btn-outline-primary btn-round">Yeni Rezervasyon Ekle</a>
+                        <div class="col-md-8">
+                            <ul class="list-group" id="bookingList"></ul>
+                        </div>
                     </div>
                 </div>
             </div>
