--- a/SignalRWebUI/Views/Booking/Index.cshtml
+++ b/SignalRWebUI/Views/Booking/Index.cshtml
@@ -30,10 +30,33 @@
 
                 connection.on("ReceiveBookingList", (resultBookingList) => {
                     console.log(resultBookingList);
-                    $("#bookingList").empty();
-                    resultBookingList.forEach((item, index)=>{
-                        $("#bookingList").append(`<li class="list-group-item">${item.fullName}</li>`)
+                    let tablehtml = `<table class="table mt-3"><thead>
+                                        <tr> 
+                                            <th scope="col">#</th>
+                                            <th scope="col">Ad Soyad</th>
+                                            <th scope="col">Telefon Numarası</th>
+                                            <th scope="col">Email</th>
+                                            <th scope="col">Kişi Sayısı</th>                                          
+                                            <th scope="col">Rezervasyon Durumu</th>
+                                            <th scope="col">Sil</th>
+                                            <th scope="col">Güncelle</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>`
+                    $.each(resultBookingList, (index, item) => {
+                        tablehtml += `<tr>
+                                        <td>${item.id}</td>
+                                        <td>${item.fullName}</td>
+                                        <td>${item.phoneNumber}</td>
+                                        <td>${item.email}</td>
+                                        <td>${item.personCount}</td>
+                                        <td>${"Rezervasyon Alındı"}</td>
+                                        <td><a href="/Booking/DeleteBooking/${item.id}/" class="btn btn-outline-danger btn-round">Sil</a></td>
+                                        <td><a href="/Booking/UpdateBooking/${item.id}/" class="btn btn-outline-warning btn-round">Güncelle</a></td>
+                                      </tr>`
                     });
+                    tablehtml += "</tbody></table>";
+                    $("#bookingList").html(tablehtml)
                 });
 
             });
@@ -51,42 +74,9 @@
                         <div class="card-sub">
                             Rezervasyon ile ilgili işlemleri aşağıdan gerçekleştirebilirsiniz.
                         </div>
-                        <table class="table mt-3">
-                            <thead>
-                            <tr>
-                                <th scope="col">#</th>
-                                <th scope="col">Ad Soyad</th>
-                                <th scope="col">Telefon Numarası</th>
-                                <th scope="col">Email</th>
-                                <th scope="col">Kişi Sayısı</th>
-                                <th scope="col">Tarih</th>
-                                <th scope="col">Rezervasyon Durumu</th>
-                                <th scope="col">Sil</th>
-                                <th scope="col">Güncelle</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            @foreach (var item in Model)
-                            {
-                                count++;
-                                <tr>
-                                    <td>@count</td>
-                                    <td>@item.FullName</td>
-                                    <td>@item.PhoneNumber</td>
-                                    <td>@item.Email</td>
-                                    <td>@item.PersonCount</td>
-                                    <td>@item.Date</td>
-                                    <td>Rezervasyon Alındı</td>
-                                    <td><a href="/Booking/DeleteBooking/@item.Id/" class="btn btn-outline-danger btn-round">Sil</a></td>
-                                    <td><a href="/Booking/UpdateBooking/@item.Id/" class="btn btn-outline-warning btn-round">Güncelle</a></td>
-                                </tr>
-                            }
-                            </tbody>
-                        </table>
+                        <div id="bookingList"></div>
                         <a href="/Booking/CreateBooking/" class="btn btn-outline-primary btn-round">Yeni Rezervasyon Ekle</a>
-                        <div class="col-md-8">
-                            <ul class="list-group" id="bookingList"></ul>
-                        </div>
+                       
                     </div>
                 </div>
             </div>
