--- a/SignalRWebUI/Views/Booking/CreateBooking.cshtml
+++ b/SignalRWebUI/Views/Booking/CreateBooking.cshtml
@@ -39,7 +39,7 @@
                         </div>
                         <div class="card-action">
                             <button class="btn btn-primary btn-round">Rezervasyonu Ekle</button>
-                            <a href="/About/Index/" class="btn btn-danger btn-round">Değişikliklerden Vazgeç</a>
+                            <a href="/Booking/Index/" class="btn btn-danger btn-round">Değişikliklerden Vazgeç</a>
                         </div>
                     </div>
                 </form>
