--- a/SignalRWebUI/Views/Shared/Components/_LayoutNavbarPartialComponent/Default.cshtml
+++ b/SignalRWebUI/Views/Shared/Components/_LayoutNavbarPartialComponent/Default.cshtml
@@ -1,4 +1,33 @@
-﻿<div class="main-header">
+﻿<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="~/js/site.js" asp-append-version="true"></script>
+<script src="~/lib/microsoft/signalr/dist/browser/signalr.js"></script>
+<script src="~/lib/microsoft/signalr/dist/browser/signalr.min.js"></script>
+
+<div class="main-header">
+
+    <script type="text/javascript">
+
+        $(document).ready(() => {
+
+            var connection = new signalR.HubConnectionBuilder().withUrl("https://localhost:7065/SignalRHub").build();
+            $("#connstatus").text(connection.state);
+            connection.start().then(() => {
+                $("#connstatus").text(connection.state);
+                setInterval(() => {
+                    connection.invoke("SendNotification");
+                }, 1000);
+
+            }).catch((err) => { console.log(err) });
+
+            connection.on("ReceiveNotificationCountByFalse", (resultNotificationCountByFalse) => {
+                $("#notificationcountbyfalse").text(resultNotificationCountByFalse);
+            });
+
+        });
+
+    </script>
+
     <div class="logo-header">
         <a href="index.html" class="logo">
             SignalR Admin
@@ -35,7 +64,7 @@
                 <li class="nav-item dropdown hidden-caret">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <i class="la la-bell"></i>
-                        <span class="notification">3</span>
+                        <span class="notification" id="notificationcountbyfalse"></span>
                     </a>
                     <ul class="dropdown-menu notif-box" aria-labelledby="navbarDropdown">
                         <li>
@@ -57,17 +86,6 @@
                                     <div class="notif-content">
                                         <span class="block">
                                             Rahmad commented on Admin
-                                        </span>
-                                        <span class="time">12 minutes ago</span>
-                                    </div>
-                                </a>
-                                <a href="#">
-                                    <div class="notif-img">
-                                        <img src="~/Ready-Bootstrap-Dashboard-master/assets/img/profile2.jpg" alt="Img Profile">
-                                    </div>
-                                    <div class="notif-content">
-                                        <span class="block">
-                                            Reza send messages to you
                                         </span>
                                         <span class="time">12 minutes ago</span>
                                     </div>
