notification class list

--- a/SignalRWebUI/Views/_ViewImports.cshtml
+++ b/SignalRWebUI/Views/_ViewImports.cshtml
@@ -11,4 +11,5 @@
 @using SignalRWebUI.ViewModels.TestimonialViewModels
 @using SignalRWebUI.ViewModels.SliderViewModels
 @using SignalRWebUI.ViewModels.BasketViewModels
+@using SignalRWebUI.ViewModels.NotificationViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
