notification delete, update, create transactions

--- a/SignalRWebUI/Views/Notifications/Index.cshtml
+++ b/SignalRWebUI/Views/Notifications/Index.cshtml
@@ -43,7 +43,7 @@
                                 }
                             </tbody>
                         </table>
-                        <a href="/Notifications/CreateNotification/" class="btn btn-outline-primary btn-round">Yeni Kategori Ekle</a>
+                        <a href="/Notifications/CreateNotification/" class="btn btn-outline-primary btn-round">Yeni Bildirim Ekle</a>
                     </div>
                 </div>
             </div>
