--- a/SignalRWebUI/Views/Notifications/Index.cshtml
+++ b/SignalRWebUI/Views/Notifications/Index.cshtml
@@ -27,6 +27,8 @@
                                     <th scope="col">Durumu</th>
                                     <th scope="col">Sil</th>
                                     <th scope="col">Güncelle</th>
+                                    <th scope="col">Okundu İşaratle</th>
+                                    <th scope="col">Okunmadı İşaretle</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -39,6 +41,8 @@
                                         <td>@item.Status</td>
                                         <td><a href="/Notifications/DeleteNotification/@item.Id/" class="btn btn-outline-danger btn-round">Sil</a></td>
                                         <td><a href="/Notifications/UpdateNotification/@item.Id/" class="btn btn-outline-warning btn-round">Güncelle</a></td>
+                                        <td><a href="/Notifications/NotificationChangeToStatusTrue/@item.Id/" class="btn btn-outline-info  btn-round">Okundu</a></td>
+                                        <td><a href="/Notifications/NotificationChangeToStatusFalse/@item.Id/" class="btn btn-outline-dark  btn-round">Okunmadı</a></td>
                                     </tr>
                                 }
                             </tbody>
