--- a/SignalRWebUI/Views/_ViewImports.cshtml
+++ b/SignalRWebUI/Views/_ViewImports.cshtml
@@ -12,4 +12,5 @@
 @using SignalRWebUI.ViewModels.SliderViewModels
 @using SignalRWebUI.ViewModels.BasketViewModels
 @using SignalRWebUI.ViewModels.NotificationViewModels
+@using SignalRWebUI.ViewModels.MenuTableViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
