--- a/SignalRWebUI/Views/MenuTables/GetTableListByStatus.cshtml
+++ b/SignalRWebUI/Views/MenuTables/GetTableListByStatus.cshtml
@@ -7,35 +7,66 @@
     string status = "";
 }
 
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="~/js/site.js" asp-append-version="true"></script>
+<script src="~/lib/microsoft/signalr/dist/browser/signalr.js"></script>
+<script src="~/lib/microsoft/signalr/dist/browser/signalr.min.js"></script>
+
 <div class="content">
     <div class="container-fluid">
+
+        <script type="text/javascript">
+
+            $(document).ready(() => {
+
+                var connection = new signalR.HubConnectionBuilder().withUrl("https://localhost:7065/SignalRHub").build();
+                $("#connstatus").text(connection.state);
+                connection.start().then(() => {
+                    $("#connstatus").text(connection.state);
+                    setInterval(() => {
+                        connection.invoke("GetMenuTableStatus");
+                    }, 1000);
+
+                }).catch((err) => { console.log(err) });
+
+                connection.on("ReceiveMenuTableStatus", (resultMenuTableStatus) => {
+                    console.log(resultMenuTableStatus);
+                    let tablehmtl = `<div class="row">`;
+                    $.each(resultMenuTableStatus, (index, item) => {
+                        color = item.status == false ? "card card-stats card-success" : "card card-stats card-danger";
+                        status = item.status ? "Masa Dolu" : "Masa Boş";
+                        tablehmtl += `<div class="col-md-3">
+                                            <div class="${color}">
+                                                <div class="card-body">
+                                                    <div class="row">
+                                                        <div class="col-5">
+                                                            <div class="icon-big text-center">
+                                                                <i class="la la-certificate"></i>
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-7 d-flex align-items-center">
+                                                            <div class="numbers">
+                                                                <p class="card-category">${item.name}</p>
+                                                                <h4 class="card-title">${status}</h4>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>`
+                    });
+                    tablehmtl += "</div>"
+                    $("#statuslist").html(tablehmtl);
+                });
+
+            });
+
+        </script>
+
         <h4 class="page-title">Anlık Masa Durumları</h4>
 
-        <div class="row">
-            @foreach (var item in Model)
-            {
-                color = item.Status == false ? "card card-stats card-success" : "card card-stats card-danger";
-                status= @item.Status ? "Masa Dolu" : "Masa Boş";
-                <div class="col-md-3">
-                    <div class="@color">
-                        <div class="card-body ">
-                            <div class="row">
-                                <div class="col-5">
-                                    <div class="icon-big text-center">
-                                        <i class="la la-certificate"></i>
-                                    </div>
-                                </div>
-                                <div class="col-7 d-flex align-items-center">
-                                    <div class="numbers">
-                                        <p class="card-category">@item.Name</p>
-                                        <h4 class="card-title">@status</h4>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            }
-        </div>
+        <div id="statuslist"></div>
+
     </div>
 </div>
