--- a/SignalRWebUI/Views/Booking/Index.cshtml
+++ b/SignalRWebUI/Views/Booking/Index.cshtml
@@ -25,7 +25,7 @@
                     $("#connstatus").text(connection.state);
                     setInterval(() => {
                         connection.invoke("GetBookingList");
-                    }, 5000);
+                    }, 2000);
                 }).catch((err) => { console.log(err) });
 
                 connection.on("ReceiveBookingList", (resultBookingList) => {
@@ -45,7 +45,7 @@
                                         <tbody>`
                     $.each(resultBookingList, (index, item) => {
                         tablehtml += `<tr>
-                                        <td>${item.id}</td>
+                                        <th>${index+1}</th>
                                         <td>${item.fullName}</td>
                                         <td>${item.phoneNumber}</td>
                                         <td>${item.email}</td>
