--- a/SignalRWebUI/Views/Category/Index.cshtml
+++ b/SignalRWebUI/Views/Category/Index.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/AdminLayout/Index.cshtml";
+    int count = 0;
 }
 
 <div class="content">
@@ -29,9 +30,11 @@
                             </tr>
                             </thead>
                             <tbody>
-                            @foreach(var item in Model){
+                            @foreach(var item in Model)
+                            {
+                                count++;
                                 <tr>
-                                    <td>@item.Id</td>
+                                    <th>@count</th>
                                     <td>@item.CategoryName</td>
                                     <td>@item.Status</td>
                                         <td><a href="/Category/DeleteCategory/@item.Id/" class="btn btn-outline-danger btn-round">Sil</a></td>
