--- a/SignalRWebUI/Views/Product/Index.cshtml
+++ b/SignalRWebUI/Views/Product/Index.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/AdminLayout/Index.cshtml";
+    int count = 0;
 }
 
 <div class="content">
@@ -33,8 +34,9 @@
                             <tbody>
                                 @foreach (var item in Model)
                                 {
+                                    count++;
                                     <tr>
-                                        <td>@item.Id</td>
+                                        <th>@count</th>
                                         <td>@item.ProductName</td>
                                         <td>@item.Description</td>
                                         <td>@item.Price</td>
