--- a/SignalRWebUI/Views/Shared/Components/_LayoutSidebarPartialComponent/Default.cshtml
+++ b/SignalRWebUI/Views/Shared/Components/_LayoutSidebarPartialComponent/Default.cshtml
@@ -58,7 +58,7 @@
             </li>
             <li class="nav-item">
                 <a href="/Product/Index/">
-                    <i class="la la-th"></i>
+                    <i class="la la-spoon"></i>
                     <p>Ürünler</p>
                 </a>
             </li>
