--- a/SignalRWebUI/Views/Booking/Index.cshtml
+++ b/SignalRWebUI/Views/Booking/Index.cshtml
@@ -37,9 +37,12 @@
                                             <th scope="col">Telefon Numarası</th>
                                             <th scope="col">Email</th>
                                             <th scope="col">Kişi Sayısı</th>                                          
+                                            <th scope="col">Tarih</th>                                          
                                             <th scope="col">Rezervasyon Durumu</th>
                                             <th scope="col">Sil</th>
                                             <th scope="col">Güncelle</th>
+                                            <th scope="col">Onayla</th>
+                                            <th scope="col">İptal Et</th>
                                         </tr>
                                         </thead>
                                         <tbody>`
@@ -50,9 +53,12 @@
                                         <td>${item.phoneNumber}</td>
                                         <td>${item.email}</td>
                                         <td>${item.personCount}</td>
-                                        <td>${"Rezervasyon Alındı"}</td>
+                                        <td>${item.date}</td>
+                                        <td>${item.description}</td>
                                         <td><a href="/Booking/DeleteBooking/${item.id}/" class="btn btn-outline-danger btn-round">Sil</a></td>
                                         <td><a href="/Booking/UpdateBooking/${item.id}/" class="btn btn-outline-warning btn-round">Güncelle</a></td>
+                                        <td><a href="/Booking/BookingStatusApproved/${item.id}/" class="btn btn-outline-info btn-round">Onayla</a></td>
+                                        <td><a href="/Booking/BookingStatusCanceled/${item.id}/" class="btn btn-outline-dark btn-round">İptal Et</a></td>
                                       </tr>`
                     });
                     tablehtml += "</tbody></table>";
