--- a/SignalRWebUI/Views/Product/Index.cshtml
+++ b/SignalRWebUI/Views/Product/Index.cshtml
@@ -3,6 +3,7 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/AdminLayout/Index.cshtml";
     int count = 0;
+    string status = "";
 }
 
 <div class="content">
@@ -35,13 +36,14 @@
                                 @foreach (var item in Model)
                                 {
                                     count++;
+                                    status = item.Status ? "Aktif" : "Pasif";
                                     <tr>
                                         <th>@count</th>
                                         <td>@item.ProductName</td>
                                         <td>@item.Description</td>
                                         <td>@item.Price</td>
                                         <td>@item.CategoryName</td>
-                                        <td>@item.Status</td>
+                                        <td>@status</td>
                                         <td><a href="/Product/DeleteProduct/@item.Id/" class="btn btn-outline-danger btn-round">Sil</a></td>
                                         <td><a href="/Product/UpdateProduct/@item.Id/" class="btn btn-outline-warning btn-round">Güncelle</a></td>
                                     </tr>
