--- a/SignalRWebUI/Views/About/Index.cshtml
+++ b/SignalRWebUI/Views/About/Index.cshtml
@@ -17,8 +17,8 @@
                     </div>
                     <div class="card-body">
                         <div class="card-sub">
-                            Hakkımızda alanı ile ilgili işlemleri aşağıdan gerçekleştirebilirsiniz. Tema bütünlüğü için sadece 1 tane hakkımızda alanı oluşturmayı unutmayın.
-                        </div>
+                            Hakkımızda alanı ile ilgili işlemleri aşağıdan gerçekleştirebilirsiniz. <strong>Tema bütünlüğü için sadece 1 tane hakkımızda alanı oluşturmayı unutmayın.
+                            </strong></div>
                         <table class="table mt-3">
                             <thead>
                                 <tr>
