--- a/SignalRWebUI/Views/Discount/Index.cshtml
+++ b/SignalRWebUI/Views/Discount/Index.cshtml
@@ -18,7 +18,7 @@
                     </div>
                     <div class="card-body">
                         <div class="card-sub">
-                            Günün İndirimleri ile ilgili işlemleri aşağıdan gerçekleştirebilirsiniz. Tema bütünlüğü için 2 adet indirimli ürün seçiniz.
+                            Günün İndirimleri ile ilgili işlemleri aşağıdan gerçekleştirebilirsiniz. <strong>Tema bütünlüğü için 2 adet indirimli ürün seçiniz.</strong>
                         </div>
                         <table class="table mt-3">
                             <thead>
