--- a/SignalRWebUI/Views/Contact/Index.cshtml
+++ b/SignalRWebUI/Views/Contact/Index.cshtml
@@ -16,16 +16,17 @@
                     </div>
                     <div class="card-body">
                         <div class="card-sub">
-                            İletişim alanı ile ilgili işlemleri aşağıdan gerçekleştirebilirsiniz. Tema bütünlüğü için sadece 1 tane iletişim alanı oluşturmayı unutmayın.
+                            İletişim alanı ile ilgili işlemleri aşağıdan gerçekleştirebilirsiniz. <strong>Tema bütünlüğü için sadece 1 tane iletişim alanı oluşturmayı unutmayın.</strong>
                         </div>
                         <table class="table mt-3">
                             <thead>
                                 <tr>
-                                    <th scope="col">#</th>
                                     <th scope="col">Konum</th>
                                     <th scope="col">Telefon</th>
                                     <th scope="col">Email</th>
-                                    <th scope="col">Açıklama</th>
+                                    <th scope="col">Alt Başlık</th>
+                                    <th scope="col">Açık Günler Açıklama</th>
+                                    <th scope="col">Açık Günler</th>
                                     <th scope="col">Sil</th>
                                     <th scope="col">Güncelle</th>
                                 </tr>
@@ -34,11 +35,12 @@
                                 @foreach (var item in Model)
                                 {
                                     <tr>
-                                        <td>@item.Id</td>
                                         <td>@item.Location</td>
                                         <td>@item.PhoneNumber</td>
                                         <td>@item.Email</td>
-                                        <td>@item.FooterDescription</td>
+                                        <td>@item.FooterTitle</td>
+                                        <td>@item.OpenDaysDescription</td>
+                                        <td>@item.OpenDays</td>
                                         <td><a href="/Contact/DeleteContact/@item.Id/" class="btn btn-outline-danger btn-round">Sil</a></td>
                                         <td><a href="/Contact/UpdateContact/@item.Id/" class="btn btn-outline-warning btn-round">Güncelle</a></td>
                                     </tr>
