--- a/SignalRWebUI/Views/Shared/Components/_LayoutSidebarPartialComponent/Default.cshtml
+++ b/SignalRWebUI/Views/Shared/Components/_LayoutSidebarPartialComponent/Default.cshtml
@@ -93,8 +93,8 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="/Feature/Index/">
-                    <i class="la la-fonticons"></i>
+                <a href="/Slider/Index/">
+                    <i class="la la-flag-o"></i>
                     <p>Öne Çıkanlar</p>
                 </a>
             </li>
@@ -111,10 +111,10 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="icons.html">
+                <a href=/Statistic/Index/>
                     <i class="la la-fonticons"></i>
                     <p>İstatistikler</p>
-                </a>
+                
             </li>
             <li class="nav-item">
                 <a href="icons.html">
