--- a/SignalRWebUI/Views/Slider/UpdateSlider.cshtml
+++ b/SignalRWebUI/Views/Slider/UpdateSlider.cshtml
@@ -1,7 +1,7 @@
-﻿@model UpdateFeatureViewModel
+﻿@model UpdateSliderViewModel
 
 @{
-    ViewData["Title"] = "UpdateFeature";
+    ViewData["Title"] = "UpdateSlider";
     Layout = "~/Views/AdminLayout/Index.cshtml";
 }
 
@@ -44,7 +44,7 @@
                         </div>
                         <div class="card-action">
                             <button class="btn btn-primary btn-round">Öne Çıkan Alanı Güncelle</button>
-                            <a href="/Feature/Index/" class="btn btn-danger btn-round">Değişikliklerden Vazgeç</a>
+                            <a href="/Slider/Index/" class="btn btn-danger btn-round">Değişikliklerden Vazgeç</a>
                         </div>
                     </div>
                 </form>
