--- a/SignalRWebUI/Views/Slider/CreateSlider.cshtml
+++ b/SignalRWebUI/Views/Slider/CreateSlider.cshtml
@@ -1,7 +1,7 @@
-﻿@model CreateFeatureViewModel
+﻿@model CreateSliderViewModel
 
 @{
-    ViewData["Title"] = "CreateFeature";
+    ViewData["Title"] = "CreateSlider";
     Layout = "~/Views/AdminLayout/Index.cshtml";
 }
 
@@ -43,7 +43,7 @@
                         </div>
                         <div class="card-action">
                             <button class="btn btn-primary btn-round">Öne Çıkan Alanı Ekle</button>
-                            <a href="/Feature/Index/" class="btn btn-danger btn-round">Değişikliklerden Vazgeç</a>
+                            <a href="/Slider/Index/" class="btn btn-danger btn-round">Değişikliklerden Vazgeç</a>
                         </div>
                     </div>
                 </form>
