--- a/SignalRWebUI/Views/Slider/Index.cshtml
+++ b/SignalRWebUI/Views/Slider/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<ResultFeatureViewModel>
+﻿@model List<ResultSliderViewModel>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/AdminLayout/Index.cshtml";
@@ -15,12 +15,11 @@
                     </div>
                     <div class="card-body">
                         <div class="card-sub">
-                            Ana sayfada öne çıkan alan ile ilgili işlemleri aşağıdan gerçekleştirebilirsiniz.
+                            Ana sayfada öne çıkan alan ile ilgili işlemleri aşağıdan gerçekleştirebilirsiniz. <strong>Lütfen sadece 1 tane öne çıkan alan verisi oluşturun.</strong>
                         </div>
                         <table class="table mt-3">
                             <thead>
                                 <tr>
-                                    <th scope="col">#</th>
                                     <th scope="col">Başlık 1</th>
                                     <th scope="col">Açıklama 1</th>
                                     <th scope="col">Başlık 2</th>
@@ -35,20 +34,19 @@
                                 @foreach (var item in Model)
                                 {
                                     <tr>
-                                        <td>@item.Id</td>
                                         <td>@item.Title1</td>
                                         <td>@item.Description1</td>
                                         <td>@item.Title2</td>
                                         <td>@item.Description2</td>
                                         <td>@item.Title3</td>
                                         <td>@item.Description3</td>
-                                        <td><a href="/Feature/DeleteFeature/@item.Id/" class="btn btn-outline-danger btn-round">Sil</a></td>
-                                        <td><a href="/Feature/UpdateFeature/@item.Id/" class="btn btn-outline-warning btn-round">Güncelle</a></td>
+                                        <td><a href="/Slider/DeleteSlider/@item.Id/" class="btn btn-outline-danger btn-round">Sil</a></td>
+                                        <td><a href="/Slider/UpdateSlider/@item.Id/" class="btn btn-outline-warning btn-round">Güncelle</a></td>
                                     </tr>
                                 }
                             </tbody>
                         </table>
-                        <a href="/Feature/CreateFeature/" class="btn btn-outline-primary btn-round">Yeni Öne Çıkan Alan Ekle</a>
+                        <a href="/Slider/CreateSlider/" class="btn btn-outline-primary btn-round">Yeni Öne Çıkan Alan Ekle</a>
                     </div>
                 </div>
             </div>
